--- a/app/src/main/res/layout/activity_driving.xml
+++ b/app/src/main/res/layout/activity_driving.xml
@@ -22,4 +22,13 @@
 
         android:text="Flip" />
 
+    <Button
+        android:text="Button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/mapButton"
+        tools:layout_editor_absoluteY="16dp"
+        tools:layout_editor_absoluteX="280dp"
+        android:onClick="onShowMapButtonClicked" />
+
 </android.support.constraint.ConstraintLayout>
