--- a/app/src/main/res/layout/activity_driving.xml
+++ b/app/src/main/res/layout/activity_driving.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -15,8 +15,8 @@
 
     <Button
         android:id="@+id/flipButton"
-        android:layout_width="88dp"
-        android:layout_height="48dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         tools:layout_editor_absoluteY="8dp"
         tools:layout_editor_absoluteX="8dp"
 
@@ -29,6 +29,23 @@
         android:id="@+id/mapButton"
         tools:layout_editor_absoluteY="16dp"
         tools:layout_editor_absoluteX="280dp"
-        android:onClick="onShowMapButtonClicked" />
+        android:onClick="onShowMapButtonClicked"
+        android:layout_alignParentTop="true"
+        android:layout_alignRight="@+id/preview"
+        android:layout_alignEnd="@+id/preview" />
 
-</LinearLayout>
+    <Button
+        android:text="Contacts"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:id="@+id/contact_button"
+        android:onClick="onContactsButtonClicked" />
+
+    <ListView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="invisible"
+        android:id="@+id/contact_view" />
+</RelativeLayout>
